--- a/src/asset/css/roomdetail.css
+++ b/src/asset/css/roomdetail.css
@@ -1,6 +1,21 @@
 .cursor {
   cursor: pointer;
 }
+.ant-form{
+  padding: 2em;
+  box-shadow: 0px 0px 9px 10px rgba(0,0,0,0.19);
+  border-radius: 10px;
+}
+.btn_submit{
+  background-image: linear-gradient(to right,  #E233FF , #FF6B00);
+  color: white;
+  transition: all 1s;
+}
+.btn_submit:hover{
+  background-image: linear-gradient(to right,  #F14658 , #DC2537);
+  color: wheat;
+  box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.74);
+}
 /* Responsive */
 /* Iphone*/
 @media screen and (min-width: 375px) {
