--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,12 @@
 }
  p,h1,h2,h3,h4,h5,h6{
     margin-bottom: 0;
+    font-family: 'Playfair Display', serif;	
 }
+p,span{
+    font-family: 'Lato', sans-serif;	
+}
+
 
 .d-flex{
     align-items: center;
