--- a/src/asset/css/roomdetail.css
+++ b/src/asset/css/roomdetail.css
@@ -9,12 +9,12 @@
 .btn_submit{
   background-image: linear-gradient(to right,  #E233FF , #FF6B00);
   color: white;
-  transition: all 1s;
+  transition: all 0.5s;
 }
 .btn_submit:hover{
   background-image: linear-gradient(to right,  #F14658 , #DC2537);
   color: wheat;
-  box-shadow: 0px 0px 15px 3px rgba(0,0,0,0.74);
+  box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.381);
 }
 /* Responsive */
 /* Iphone*/
