--- a/src/asset/css/roomdetail.css
+++ b/src/asset/css/roomdetail.css
@@ -1,51 +1,53 @@
+/** @format */
+
 .cursor {
   cursor: pointer;
 }
-.ant-form{
-  padding: 2em;
-  box-shadow: 0px 0px 9px 10px rgba(0,0,0,0.19);
-  border-radius: 10px;
+.roomDetail {
+  width: 100%;
 }
-.btn_submit{
-  background-image: linear-gradient(to right,  #E233FF , #FF6B00);
+
+/* ROOMDETAIL HEAD*/
+
+.roomDetail .btn_submit {
+  background-image: linear-gradient(to right, #e233ff, #ff6b00);
   border-radius: 5px;
   color: white;
   transition: all 0.5s;
 }
-.btn_submit:focus{
-  background-image: linear-gradient(to right,  #F14658 , #DC2537);
+.roomDetail .btn_submit:focus {
+  background-image: linear-gradient(to right, #f14658, #dc2537);
   color: white;
 }
-.btn_submit:hover{
-  background-image: linear-gradient(to right,  #F14658 , #DC2537);
+.roomDetail .btn_submit:hover {
+  background-image: linear-gradient(to right, #f14658, #dc2537);
   color: #fff;
   /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.381); */
 }
 
 /* Button thêm chi tiet  */
-.custom-btn {
+.roomDetail .custom-btn {
   height: 40px;
   color: #fff;
   border-radius: 5px;
   padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 500;
   background: transparent;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
   display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
+  box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
   outline: none;
-} 
+}
 
-.btn_Add {
+.roomDetail .btn_Add {
   border: none;
   color: #000;
 }
-.btn_Add:after {
+.roomDetail .btn_Add:after {
   position: absolute;
   content: "";
   width: 0;
@@ -54,54 +56,119 @@
   left: 0;
   direction: rtl;
   z-index: -1;
-  box-shadow:
-   -7px -7px 20px 0px #fff9,
-   -4px -4px 5px 0px #fff9,
-   7px 7px 20px 0px #0002,
-   4px 4px 5px 0px #0001;
+  box-shadow: -7px -7px 20px 0px #fff9, -4px -4px 5px 0px #fff9,
+    7px 7px 20px 0px #0002, 4px 4px 5px 0px #0001;
   transition: all 0.3s ease;
 }
-.btn_Add:hover {
+.roomDetail .btn_Add:hover {
   color: #000;
 }
-.btn_Add:hover:after {
+.roomDetail .btn_Add:hover:after {
   left: auto;
   right: 0;
   width: 100%;
 }
-.btn_Add:active {
+.roomDetail .btn_Add:active {
   top: 2px;
 }
 
+.roomDetail .roomDetail_head_tittle,
+.roomDetail_book,
+.roomDetail_reviews {
+  padding: 0 20px;
+}
 
+.roomDetail .h_located {
+  font-weight: 600;
+  text-decoration: underline;
+  font-size: 16px;
+}
+.roomDetail .form_book {
+  max-width: 500px;
+  padding: 1.5em;
+  box-shadow: 0px 0px 5px 2px rgba(161, 156, 156, 0.118);
+  border-radius: 10px;
+}
+.filter {
+  position: fixed;
+  top: 50%;
+  transform: translateY(-50%);
+}
 
-
+/* ROOMDETAIL END*/
 
 /* Responsive */
 /* Iphone*/
 @media screen and (min-width: 375px) {
-  .roomDetail {
-    font-size: 12px;
+  .roomDetail .col-12 {
+    padding-left: 0;
+    padding-right: 0;
   }
-  .flex_direction {
+  .roomDetail .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .roomDetail {
+    font-size: 14px;
+    line-height: 1.4;
+    padding-top: 450px;
+    position: relative;
+  }
+  .roomDetail .flex_direction {
     flex-direction: column;
+  }
+  .roomDetail .roomDetail_head_photos {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .roomDetail .roomDetail_head_photos_image {
+    height: 400px;
+    width: 100vw;
+  }
+  .ant-picker-panel-container .ant-picker-panels {
+    display: inline-flex;
+    flex-wrap: wrap;
+    direction: ltr;
+    width: 300px;
   }
 }
 /*Ipad*/
 @media screen and (min-width: 768px) {
   .roomDetail {
-    font-size: 13px;
+    padding-top: 550px;
+  }
+  .roomDetail .roomDetail_head_photos_image {
+    height: 500px;
+    width: 100vw;
+  }
+
+  .ant-picker-panel-container .ant-picker-panels {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    direction: ltr;
+    width: 100%;
   }
 }
+
 /* Iphone ngang Ipad ngang*/
 @media screen and (min-width: 1024px) {
   .roomDetail {
-    font-size: 15px;
+    font-size: 16px;
+    padding-top: 50px;
+  }
+  .roomDetail .roomDetail_head_photos {
+    position: relative;
+    padding: 2em 0;
+  }
+  .roomDetail .roomDetail_head_photos_image {
+    height: 600px;
+    width: 100vw;
   }
 }
 /*destop*/
 @media screen and (min-width: 1199px) {
-    .roomDetail {
-        font-size: 16px;
-      }
+  .roomDetail {
+    font-size: 18px;
+  }
 }
