--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@ p,span{
 .d-flex{
     align-items: center;
 }
+.ant-back-top{
+    transition: all 0.5s;
+}
+.ant-back-top:hover{
+    transform: scale(1.2);
+    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+}
