--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,12 @@
 /* ---------------------------------- */
 /* Forms Reset & Styles
 ------------------------------------- */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+  }
+  	
 input,
 input[type="text"],
 input[type="password"],
