--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,4 @@
-/** @format */
 
-/*
-* Author: Vasterad
-* URL: http://purethemes.net
-*/
-
-/* ------------------------------------------------------------------- */
-/* Table of Contents
-----------------------------------------------------------------------
-
-	01. Import Section ...................... Imported variables.
-
-	02. Layout Components ................... Generic layout elements.
-		# Forms Reset & Styles
-		# Header
-		# Sticky Header
-		# Back to top
-		# Navigation
-		# User Menu
-		# mmenu.js - mobile menu
-		# Main Search Container
-		# Range Slider
-		# Chosen Plugin
-		# Sort by custom select
-		# Custom Chosen Dropdown
-		# Input with dropdown
-		# Panel Dropdown
-		# Booking Page
-		# Single Listing Page
-		# Contact Page
-		# Coming Soon Page
-		# Blog Styles
-		# Listing Item Layout Style
-		# Small Category Boxes
-		# Titlebar
-
-	03. Shortcodes .......................... Template elements.
-		# Buttons
-		# Tables
-		# Accordion / Toggles
-		# Share Buttons
-		# Post Navigation
-		# Pricing Tables
-		# List Styles
-		# Tooltips
-		# Info Box
-		# Notification Boxes
-		# Testimonials
-		# Tabs
-		# Login Register
-		# Social Icons
-		# Custom Checkboxes
-
-	04. Dashboard ........................... User panel styles
-		# Dashboard Navigation
-		# Dashboard Titlebar
-		# Dashboard Stats Boxes
-		# Dashboard Pagination
-		# Dashboard List Box
-		# Add Listing
-		# Opening Hours
-		# Pricing
-
-	05. Script Styles ....................... jQuery add-ons CSS.
-		# Leaflet Maps
-		# Google Maps
-		# Dropzone
-		# Magnific Popup
-		# Parallax Background
-		# Slick Carousel
-
-	05. Others .............................. CSS helper classes etc.
-		# Common Styles
-		# Offsets
-
-	06. Media Queries ....................... Mobile style sheets.
-
-*/
-
-
-/* ------------------------------------------------------------------- */
-/* 01. Import Section
----------------------------------------------------------------------- */
-/* @import url("bootstrap-grid.css"); */
-/* Default Reset, Typography, Forms, Responsive Grid etc. */
-/* @import url("icons.css"); */
-/* Webfont Icons: FontAwesome, Line, Simple Line */
-/* @import url("plugins/revolutionslider.css"); */
-/* Revolution Slider Style Sheets */
-/* @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:500,600,700'); */
-
-
-
-/* ------------------------------------------------------------------- */
-/*  02. Layout Components
----------------------------------------------------------------------- */
-
-/* ---------------------------------- */
-/* Forms Reset & Styles
-------------------------------------- */
 * {
 	margin: 0;
 	padding: 0;
@@ -252,845 +151,6 @@ a:hover {
 img {
 	max-width: 100%;
 }
-
-
-
-/*----------------------------------- */
-/* Footer
-------------------------------------- */
-#footer {
-	padding: 70px 0 0 0;
-	background-color: #fff;
-	border-top: 1px solid rgba(0, 0, 0, 0.09);
-	font-size: 16px;
-}
-
-#footer.sticky-footer {
-	box-shadow: none;
-}
-
-#footer.dark {
-	border-top: none;
-}
-
-#footer h4 {
-	color: #333;
-	font-size: 21px;
-	margin-bottom: 25px;
-}
-
-.footer-shadow {
-	width: 100%;
-	display: block;
-	background: #fff;
-	height: 200px;
-	margin-top: -200px;
-	position: relative;
-	z-index: -1;
-	box-shadow: 0 20px 40px -20px rgba(0, 0, 0, 0.06);
-}
-
-.text-widget span {
-	color: #707070;
-}
-
-.text-widget span.address {
-	display: block;
-	margin-bottom: 10px;
-}
-
-#footer a {
-	color: #66676b;
-}
-
-/*  Links  */
-#footer ul.footer-links {
-	margin: 0 0 15px 0;
-	padding: 0;
-	width: 50%;
-	box-sizing: border-box;
-	display: inline-block;
-	float: left;
-}
-
-#footer .footer-links li {
-	position: relative;
-	list-style: none;
-}
-
-#footer .footer-links li a {
-	padding: 0 0 9px 16px;
-	display: inline-block;
-	-webkit-transition: all 0.2s ease-in-out;
-	-moz-transition: all 0.2s ease-in-out;
-	-o-transition: all 0.2s ease-in-out;
-	-ms-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	color: #707070;
-	line-height: 21px;
-}
-
-#footer .footer-links li a:hover {
-	padding-left: 22px;
-	color: #66676b;
-}
-
-#footer .footer-links li:before {
-	font-family: "FontAwesome";
-	font-size: 20px;
-	content: "\f105";
-	position: absolute;
-	left: 0;
-	top: -2px;
-	padding: 0 7px 0 0;
-	color: #ccc;
-}
-
-
-/* Footer Bottom */
-.copyrights {
-	color: #707070;
-	border-top: 1px solid rgba(0, 0, 0, 0.09);
-	margin-top: 60px;
-	text-align: center;
-	padding: 40px 0;
-	display: inline-block;
-	width: 100%;
-}
-
-#footer.alt .copyrights {
-	margin-top: 0;
-	border: none;
-	padding: 25px;
-}
-
-.copyrights a {
-	color: #707070;
-}
-
-
-/* Dark Styles */
-#footer.dark {
-	background: #222;
-	color: #aaa;
-}
-
-#footer.dark a,
-#footer.dark h4,
-#footer.dark a:hover {
-	color: #fff;
-}
-
-#footer.dark .text-widget,
-#footer.dark .text-widget span,
-#footer.dark .footer-links li a {
-	color: #aaa;
-}
-
-#footer.dark .footer-links li a:hover {
-	color: #fff;
-}
-
-#footer.dark .footer-links li:before {
-	color: #666;
-}
-
-#footer.dark .copyrights {
-	color: #aaa;
-	border-top: 1px solid rgba(255, 255, 255, 0.09);
-}
-
-#footer .social-icons li a {
-	opacity: 0.8;
-	transition: opacity 0.35s;
-}
-
-#footer .social-icons li a:hover {
-	opacity: 1;
-}
-
-
-/* ---------------------------------- */
-/* Back to top
-------------------------------------- */
-#backtotop {
-	position: fixed;
-	right: 0;
-	opacity: 0;
-	visibility: hidden;
-	bottom: 25px;
-	margin: 0 25px 0 0;
-	z-index: 999;
-	transition: 0.35s;
-	transform: scale(0.7);
-}
-
-#backtotop.visible {
-	opacity: 1;
-	visibility: visible;
-	transform: scale(1);
-}
-
-#backtotop a {
-	text-decoration: none;
-	border: 0 none;
-	display: block;
-	width: 46px;
-	height: 46px;
-	background-color: #66676b;
-	opacity: 1;
-	transition: all 0.3s;
-	border-radius: 50%;
-	text-align: center;
-	font-size: 26px
-}
-
-body #backtotop a {
-	color: #fff;
-}
-
-#backtotop a:after {
-	content: "\f106";
-	font-family: "FontAwesome";
-	position: relative;
-	display: block;
-	top: 50%;
-	-webkit-transform: translateY(-55%);
-	transform: translateY(-55%);
-}
-
-
-/* ---------------------------------- */
-/* Navigation
-------------------------------------- */
-
-#navigation {
-	position: relative;
-	display: block;
-}
-
-#navigation ul {
-	list-style: none;
-	position: relative;
-	float: left;
-	margin: 0;
-	padding: 0;
-}
-
-#navigation ul a {
-	display: block;
-	text-decoration: none;
-}
-
-#navigation ul li {
-	position: relative;
-	float: left;
-	margin: 0;
-	padding: 0
-}
-
-#navigation ul li ul {
-	opacity: 0;
-	visibility: hidden;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	padding: 0;
-	z-index: 99999;
-}
-
-#navigation ul ul li {
-	float: none;
-}
-
-#navigation ul ul ul {
-	top: 0;
-	left: 100%;
-	margin: 0;
-}
-
-#navigation ul ul {
-	margin: 10px 0 0 15px;
-}
-
-#navigation ul ul:before {
-	content: "";
-	position: absolute;
-	left: 0;
-	top: -10px;
-	background: rgba(255, 255, 255, 0);
-	width: 100%;
-	height: 10px;
-}
-
-#navigation ul ul ul:after {
-	content: "";
-	position: absolute;
-	width: 10px;
-	height: 100%;
-	left: -10px;
-	top: 0;
-	opacity: 0;
-}
-
-#navigation ul li:hover>ul {
-	opacity: 1;
-	visibility: visible;
-}
-
-/* Indicator Arrow */
-#navigation ul li a:after,
-#navigation ul ul li a:after {
-	font-family: "FontAwesome";
-	opacity: 0.5;
-}
-
-#navigation ul li a:after {
-	content: '\f107';
-	padding-left: 7px;
-}
-
-#navigation ul ul li a:after {
-	content: '\f105';
-	position: absolute;
-	right: 15px;
-	top: 7px;
-}
-
-#navigation ul li a:only-child:after {
-	content: '';
-	padding: 0;
-}
-
-#navigation ul ul li a:only-child:after {
-	content: '';
-}
-
-
-/* Dropdown Styles
-------------------------------------- */
-#navigation ul ul {
-	background-color: #fff;
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
-	border-radius: 4px;
-	font-size: 15px;
-}
-
-#navigation ul ul li {
-	border-radius: 4px;
-}
-
-#navigation ul ul li:last-child {
-	border-bottom: none;
-}
-
-#navigation ul li:hover ul a,
-#navigation ul ul a {
-	line-height: 27px !important;
-	padding: 4px 40px 4px 15px !important;
-	line-height: 24px !important;
-}
-
-body #navigation ul ul {
-	padding: 12px 10px;
-	box-sizing: border-box;
-}
-
-#navigation ul ul li {
-	width: 180px;
-}
-
-#navigation ul ul li:hover {
-	border-radius: 0;
-}
-
-#navigation ul ul li:first-child {
-	border-radius: 4px 4px 0 0;
-}
-
-#navigation ul ul li:last-child {
-	border-radius: 0 0 4px 4px;
-}
-
-#navigation ul ul {
-	opacity: 0;
-	visibility: hidden;
-	transition: all 0.25s;
-	transform: translate3d(0, 15px, 0);
-}
-
-#navigation ul li:hover>ul {
-	opacity: 1;
-	visibility: visible;
-	transform: translate3d(0, 0, 0);
-}
-
-/* Menu
-------------------------------------- */
-#navigation.style-1 .current {
-	background-color: transparent;
-	color: #66676b;
-}
-
-#navigation.style-1 {
-	margin-top: 1px;
-}
-
-#navigation.style-1 .current:after {
-	opacity: 1;
-}
-
-#navigation.style-1 ul li {
-	transition: all 0.25s;
-}
-
-#navigation.style-1 ul li a {
-	color: #444;
-	cursor: pointer;
-}
-
-body .user-menu ul li a:hover,
-#navigation.style-1 ul li:hover a {
-	color: #66676b;
-}
-
-#navigation.style-1 ul a {
-	line-height: 32px;
-	padding: 5px 15px;
-}
-
-#navigation.style-1 ul li {
-	margin: 0 5px;
-}
-
-#navigation.style-1 ul ul li {
-	margin: 0;
-	border-radius: 0;
-}
-
-#navigation.style-1 ul ul li:first-child {
-	border-radius: 4px 4px 0 0;
-}
-
-#navigation.style-1 ul ul li:last-child {
-	border-radius: 0 0 4px 4px;
-}
-
-/* Indicator Arrow */
-#navigation ul ul li a:after {
-	opacity: 0.5;
-	transition: all 0.25s;
-	transform: translateX(-5px);
-}
-
-#navigation ul ul li:hover a:after {
-	opacity: 1;
-	transform: translateX(0);
-}
-
-/* Menu Hovers */
-#navigation.style-1 ul li a {
-	transition: 0.4s;
-	border-radius: 50px;
-	font-size: 15px;
-}
-
-#navigation.style-1>ul>li>a.current,
-#navigation.style-1>ul>li:hover>a {
-	background: rgba(102, 103, 107, 0.06);
-	color: #66676b;
-}
-
-#navigation.style-1 ul li li a {
-	background: #fff !important
-}
-
-#navigation.style-1 ul a {
-	padding: 2px 15px;
-}
-
-#navigation ul ul {
-	margin: 10px 0 0 0;
-}
-
-#navigation.style-1 ul li {
-	margin: 0 3px;
-}
-
-#navigation.style-1 {
-	margin-top: 4px;
-}
-
-body #navigation ul .mega-menu:not(.mm-panel) ul a,
-body #navigation.style-1 ul ul li {
-	opacity: 1;
-}
-
-body #navigation.style-1 ul ul li a:after,
-body #navigation.style-1 ul li:hover ul li a,
-body #navigation.style-1 ul li:hover ul li:hover li a,
-body #navigation.style-1 ul li:hover ul li:hover li:hover li a,
-body #navigation.style-1 ul ul li:hover ul li a {
-	color: #666;
-}
-
-body #navigation.style-1 ul ul li:hover a:after,
-body #navigation.style-1 ul li:hover ul li:hover a,
-body #navigation.style-1 ul li:hover ul li:hover li:hover a,
-body #navigation.style-1 ul li:hover ul li:hover li:hover li:hover a,
-body #navigation.style-1 ul ul li:hover ul li a:hover {
-	color: #66676b;
-}
-
-
-/* ---------------------------------- */
-/* Mega Menu
-------------------------------------- */
-.mega-menu {
-	opacity: 0;
-	visibility: hidden;
-	transition: all 0.25s;
-	position: absolute;
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
-	border-radius: 4px;
-	font-size: 15px;
-	display: flex;
-	top: 100%;
-	left: 0;
-	padding: 20px 0;
-	box-sizing: border-box;
-	font-size: 14px;
-	margin-top: -2px;
-	background-color: #fff;
-	width: 200px;
-	z-index: 99;
-	transform: translate3d(-42%, 24px, 0);
-}
-
-.mega-menu:before {
-	content: "";
-	position: absolute;
-	top: -12px;
-	left: 0;
-	display: block;
-	width: 100%;
-	height: 12px;
-	opacity: 0;
-}
-
-#navigation ul li .mega-menu ul {
-	opacity: 0;
-	visibility: hidden;
-	transform: translate3d(0, 0, 0);
-	position: relative;
-	display: inline-block;
-	flex: 1;
-	padding: 0;
-	margin: 0;
-	box-shadow: none;
-	border-radius: 0;
-	top: auto;
-	left: auto;
-	background-color: transparent;
-}
-
-#navigation ul li:hover .mega-menu {
-	opacity: 1;
-	visibility: visible;
-	transform: translate3d(-42%, 12px, 0);
-}
-
-#navigation ul li:hover .mega-menu ul {
-	opacity: 1;
-	visibility: visible;
-}
-
-
-#navigation .mega-menu ul,
-#navigation .mega-menu ul li {
-	width: 100%;
-	opacity: 1 !important;
-}
-
-.mega-menu.two-columns {
-	width: 429px;
-}
-
-.mega-menu.three-columns {
-	width: 643px;
-}
-
-.mega-menu.four-columns {
-	width: 857px;
-}
-
-#navigation ul .mega-menu ul a {
-	color: #444;
-	padding: 0 !important;
-	display: block;
-	margin-left: 0;
-	-wekkit-transition: all 0.2s ease-in-out;
-	transition: all 0.2s ease-in-out;
-	opacity: 0.8;
-}
-
-#navigation ul .mega-menu ul a:hover {
-	opacity: 1;
-}
-
-#navigation ul li:hover .mega-menu ul a,
-#navigation ul .mega-menu ul a {
-	padding: 5px 0 !important;
-	line-height: 22px !important;
-	transform: translate3d(0, 0, 0) !important;
-}
-
-#navigation .mega-menu ul li {
-	padding: 0 30px;
-}
-
-#navigation ul li a i {
-	font-size: 14px;
-	position: relative;
-	top: 0;
-	padding-right: 5px;
-}
-
-.mega-menu-section {
-	display: inline-block;
-	float: left;
-	width: 214px;
-	padding: 0;
-	border-right: 1px solid #e9e9e9;
-}
-
-.mega-menu .mega-menu-section:last-child {
-	border: none;
-}
-
-.mega-menu-headline {
-	color: #222;
-	opacity: 1 !important;
-	font-weight: 600;
-	display: block;
-	padding: 8px 30px !important;
-	letter-spacing: 0;
-	font-size: 14px;
-	line-height: 21px;
-}
-
-/* Some mega menu styles for mobile nav */
-.mobile-styles .mm-listview {
-	margin: 0px -20px !important;
-}
-
-.mobile-styles .mm-listview .mega-menu-headline {
-	color: #fff;
-	padding: 15px 20px !important;
-	background: #222 !important;
-}
-
-.mobile-styles .mm-listview li a i {
-	padding-right: 5px;
-}
-
-.mobile-styles.mm-panel:before {
-	height: 10px !important;
-}
-
-/* Flickering Fix */
-#navigation ul li .mega-menu ul,
-#navigation ul li ul {
-	z-index: 100;
-}
-
-#navigation ul li:hover .mega-menu,
-#navigation ul li:hover ul {
-	z-index: 200;
-}
-
-
-/* ---------------------------------- */
-/* User Menu
-------------------------------------- */
-.user-menu {
-	position: relative;
-	display: inline-block;
-	cursor: pointer;
-	margin-right: 25px;
-	top: 9px;
-	vertical-align: top;
-	padding-left: 25px;
-	margin-left: 25px;
-}
-
-.user-menu .user-name {
-	transition: 0.2s;
-}
-
-/*
-.user-menu .user-name {
-	transition: 0.2s;
-	white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 130px;
-}*/
-
-.user-menu .user-name:after {
-	content: "\f107";
-	font-family: "FontAwesome";
-	transition: 0.2s;
-	transform: rotate(0deg);
-	display: inline-block;
-	margin-left: 6px;
-	color: #aaa;
-}
-
-.user-menu.active .user-name:after,
-.user-menu:hover .user-name:after,
-.user-menu.active .user-name,
-.user-menu:hover .user-name {
-	color: #66676b;
-}
-
-.user-menu.active .user-name:after {
-	transform: rotate(180deg);
-}
-
-/* Avatar */
-.user-name span img {
-	width: 100%;
-	display: inline-block;
-	border-radius: 50%;
-	image-rendering: -webkit-optimize-contrast;
-}
-
-.user-name span {
-	display: inline-block;
-	width: 38px;
-	height: 38px;
-	margin-right: 10px;
-	border-radius: 50%;
-	position: absolute;
-	left: -22px;
-	top: -5px;
-}
-
-.user-menu ul {
-	float: left;
-	text-align: left;
-	position: absolute;
-	top: 45px;
-	right: 0;
-	list-style: none;
-	background-color: #fff;
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.12);
-	border-radius: 4px;
-	display: inline-block;
-	width: 180px;
-	font-size: 15px;
-	transform: translate3d(0, 15px, 0);
-	padding: 12px 10px;
-	box-sizing: border-box;
-	transition: 0.25s;
-	visibility: hidden;
-	opacity: 0;
-	z-index: 110;
-}
-
-.user-menu ul li a {
-	padding: 6px 15px;
-	line-height: 22px;
-	display: inline-block;
-	color: #696969;
-	transition: 0.2s;
-}
-
-.user-menu ul li a:hover {
-	color: #444;
-}
-
-.user-menu ul li a i {
-	width: 20px;
-	position: relative;
-	display: inline-block;
-}
-
-.user-menu.active ul {
-	visibility: visible;
-	opacity: 1;
-	transform: translate3d(0, 0, 0);
-}
-
-.user-name span:after {
-	position: absolute;
-	content: "";
-	height: 12px;
-	width: 12px;
-	background-color: #38b653;
-	bottom: 0;
-	right: 0;
-	display: block;
-	border: 2px solid #fff;
-	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
-	border-radius: 50%;
-}
-
-/* User Menu Avatar Border */
-.user-name span img {
-	border: 3px solid #fff;
-	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-	box-sizing: content-box;
-}
-
-.user-name span {
-	width: 35px;
-	height: 35px;
-	left: -28px;
-	top: -8px;
-}
-
-.user-name span:after {
-	bottom: -6px;
-	right: -6px;
-}
-
-@media (max-width: 380px) {
-	.user-name span:after {
-		bottom: -3px;
-		right: -6px;
-	}
-}
-
-body .dashboard-nav ul li a i.fa.fa-calendar-check-o:before,
-body .user-menu ul li a i.fa.fa-calendar-check-o:before {
-	content: "\e040";
-	font-family: "simple-line-icons"
-}
-
-@media (max-width: 360px) {
-	.user-menu .user-name {
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		max-width: 0;
-	}
-}
-
-/* ---------------------------------- */
-/* mmenu.js - mobile menu
-------------------------------------- */
-/*!
- * mmenu.js
- * mmenujs.com
- *
- * Copyright (c) Fred Heusschen
- * frebsite.nl
- *
- * License: CC-BY-NC-4.0
- * http://creativecommons.org/licenses/by-nc/4.0/
- */
 
 :root {
 	--mm-line-height: 18px;
@@ -4788,7 +3848,7 @@ body .alt-search-box .main-search-input-item .chosen-container-active.chosen-wit
 
 .slider-controls button.slide-m-next,
 .slider-controls button.slide-m-prev {
-	background-image: url(../public/images/slider-arrow-grey.svg);
+	/* background-image: url(../public/images/slider-arrow-grey.svg); */
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	background-position: 50%;
@@ -4796,7 +3856,7 @@ body .alt-search-box .main-search-input-item .chosen-container-active.chosen-wit
 
 .home-search-carousel .slider-controls button.slide-m-next,
 .home-search-carousel .slider-controls button.slide-m-prev {
-	background-image: url(../public/images/slider-arrow.svg);
+	/* background-image: url(../public/images/slider-arrow.svg); */
 }
 
 .slider-controls button.slide-m-prev {
@@ -11630,7 +10690,7 @@ section.fullwidth .blog-post {
 	text-align: center;
 	border-radius: 50%;
 	background-color: #66676b;
-	background-image: url(../public/images/plus-icon.svg);
+	/* background-image: url(../public/images/plus-icon.svg); */
 	background-repeat: no-repeat;
 	background-position: 50%
 }
@@ -12068,7 +11128,7 @@ input[type="button"],
 input[type="submit"],
 a.button.border,
 a.button {
-	background-color: #66676b;
+	background-color: #f91942;
 	top: 0;
 	padding: 9px 20px;
 	color: #fff;
@@ -16277,7 +15337,7 @@ span.like-icon {
 
 /* Hover Animation */
 .category-small-box:hover {
-	background-color: #66676b;
+	background-color: #f91942;
 	color: #fff;
 	/* 	-webkit-transform: scale(1.05);
 	-moz-transform: scale(1.05); */
