--- a/src/templates/HomeTemplate/Layout/Header/header.css
+++ b/src/templates/HomeTemplate/Layout/Header/header.css
@@ -45,6 +45,111 @@
 .header__logout:hover{
     color: #f91942;
 }
+/* ---------------------------------- */
+/* Navigation
+------------------------------------- */
+
+#navigation {
+	position: relative;
+	display: block;
+}
+
+#navigation ul {
+	list-style: none;
+	position: relative;
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+
+#navigation ul a {
+	display: block;
+	text-decoration: none;
+}
+
+#navigation ul li {
+	position: relative;
+	float: left;
+	margin: 0;
+	padding: 0
+}
+
+#navigation ul li ul {
+	opacity: 0;
+	visibility: hidden;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	padding: 0;
+	z-index: 99999;
+}
+
+#navigation ul ul li {
+	float: none;
+}
+
+#navigation ul ul ul {
+	top: 0;
+	left: 100%;
+	margin: 0;
+}
+
+#navigation ul ul {
+	margin: 10px 0 0 15px;
+}
+
+#navigation ul ul:before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: -10px;
+	background: rgba(255, 255, 255, 0);
+	width: 100%;
+	height: 10px;
+}
+
+#navigation ul ul ul:after {
+	content: "";
+	position: absolute;
+	width: 10px;
+	height: 100%;
+	left: -10px;
+	top: 0;
+	opacity: 0;
+}
+
+#navigation ul li:hover>ul {
+	opacity: 1;
+	visibility: visible;
+}
+
+/* Indicator Arrow */
+#navigation ul li a:after,
+#navigation ul ul li a:after {
+	font-family: "FontAwesome";
+	opacity: 0.5;
+}
+
+#navigation ul li a:after {
+	content: '\f107';
+	padding-left: 7px;
+}
+
+#navigation ul ul li a:after {
+	content: '\f105';
+	position: absolute;
+	right: 15px;
+	top: 7px;
+}
+
+#navigation ul li a:only-child:after {
+	content: '';
+	padding: 0;
+}
+
+#navigation ul ul li a:only-child:after {
+	content: '';
+}
 @media screen and (max-width:992px){
     .header__right{
         justify-content: space-evenly;
