--- a/src/App.css
+++ b/src/App.css
@@ -4609,14 +4609,7 @@ strong.headline-with-separator,
 }
 
 @media (max-width: 991px) {
-	.main-search-input {
-		border-radius: 0;
-		display: block;
-		padding: 0;
-		max-height: 100%;
-		background-color: transparent;
-		box-shadow: none;
-	}
+	
 
 	.main-search-container.plain-color {
 		height: 700px;
@@ -15452,6 +15445,7 @@ span.like-icon {
 	position: relative;
 	padding: 70px 0;
 	margin-bottom: 65px;
+	padding-top: 140px;
 }
 
 #titlebar.gradient {
