--- a/src/asset/css/login.css
+++ b/src/asset/css/login.css
@@ -1,16 +1,12 @@
 /** @format */
 
 .login-box {
-  position: absolute;
+  margin: auto;
+  width: 100%;
+  max-width: 450px;
+  padding: 1.5em;
 
-  top: 50%;
-  left: 50%;
-  /* width: 400px; */
-  padding: 40px;
-  transform: translate(-50%, -50%);
-
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  /* box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6); */
   border-radius: 10px;
 }
 
@@ -54,7 +50,7 @@
   color: green;
   font-size: 12px;
 }
-.login-box .user-box input:focus{
+.login-box .user-box input:focus {
   border: 1px solid lightseagreen;
 }
 
@@ -67,11 +63,10 @@
   padding: 15px 15px;
 }
 .login-box .custom-btn {
-  
   letter-spacing: 4px;
   color: #fff;
   border-radius: 5px;
-  
+
   font-family: "Lato", sans-serif;
   font-weight: 500;
   cursor: pointer;
@@ -118,7 +113,7 @@
   /* color: black; */
   font-size: 1em;
   text-decoration: none;
-  
+
   overflow: hidden;
   transition: 0.5s;
   letter-spacing: 4px;
@@ -134,7 +129,8 @@
   background: rgb(34, 197, 34);
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 128, 0, 0.5), 0 0 25px rgba(0, 128, 0, 0.533), 0 0 25px rgba(0, 128, 0, 0.621), 0 0 25px rgba(0, 128, 0, 0.549);
+  box-shadow: 0 0 5px rgba(0, 128, 0, 0.5), 0 0 25px rgba(0, 128, 0, 0.533),
+    0 0 25px rgba(0, 128, 0, 0.621), 0 0 25px rgba(0, 128, 0, 0.549);
 }
 
 .login-box .btn_login button span {
