--- a/src/asset/css/login.css
+++ b/src/asset/css/login.css
@@ -131,6 +131,7 @@
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 128, 0, 0.5), 0 0 25px rgba(0, 128, 0, 0.533),
     0 0 25px rgba(0, 128, 0, 0.621), 0 0 25px rgba(0, 128, 0, 0.549);
+  
 }
 
 .login-box .btn_login button span {
@@ -143,7 +144,7 @@
   left: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(90deg, transparent, green);
+  background: linear-gradient(90deg, transparent, rgb(34, 197, 34));
   animation: btn-anim1 1s linear infinite;
 }
 
@@ -162,7 +163,7 @@
   right: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, green);
+  background: linear-gradient(180deg, transparent, rgb(34, 197, 34));
   animation: btn-anim2 1s linear infinite;
   animation-delay: 0.25s;
 }
@@ -182,7 +183,7 @@
   right: -100%;
   width: 100%;
   height: 2px;
-  background: linear-gradient(270deg, transparent, green);
+  background: linear-gradient(270deg, transparent, rgb(34, 197, 34));
   animation: btn-anim3 1s linear infinite;
   animation-delay: 0.5s;
 }
@@ -202,7 +203,7 @@
   left: 0;
   width: 2px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, green);
+  background: linear-gradient(360deg, transparent, rgb(34, 197, 34));
   animation: btn-anim4 1s linear infinite;
   animation-delay: 0.75s;
 }
