--- a/src/asset/css/cart.css
+++ b/src/asset/css/cart.css
@@ -30,8 +30,10 @@
 }
 
 @media screen and (min-width: 375px) {
+  .cart p,.cart span{
+    font-size: 15px;
+  }
   .cart {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -48,6 +50,9 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .cart p,.cart span{
+    font-size: 16px;
+  }
   .cart {
     display: flex;
     flex-direction: row-reverse;
@@ -72,6 +77,9 @@
   }
 }
 @media screen and (min-width: 1024px) {
+  .cart p,.cart span{
+    font-size: 18px;
+  }
   .cart {
     font-size:medium;
     padding: 1em 0;
