--- a/src/asset/css/roomdetail.css
+++ b/src/asset/css/roomdetail.css
@@ -10,13 +10,35 @@
   width: 100%;
   /* overflow: hidden; */
 }
+.roomDetail .btn_comment{
+  font-weight:400;
+  color: white ;
+  background-color: #e8798e;
+  border: 1px solid #f91942;
+}
+.roomDetail .btn_comment:hover,
+.roomDetail .btn_comment:focus{
+  font-weight: 700;
+  color: #f91942;
+  background-color: white;
+  border: 2px dashed #f91942;
+}
+.roomDetail .input_comment textarea{
+  color: #e75872;
+  border: 1px dashed #e75872 ;
+}
+.roomDetail .input_comment textarea:hover,
+.roomDetail .input_comment textarea:focus{
+  color: #000;
+  border: 2px solid #ef4363;
+}
 
 /* ROOMDETAIL HEAD*/
 .roomDetail button {
   transition: all 1s;
 }
 .roomDetail .btn_submit {
-  background-image: linear-gradient(to right, #e233ff, #ff6b00);
+  background-image: linear-gradient(to right,#f91942,#e8798e);
   border-radius: 5px;
   color: white;
   width: 200px;
@@ -26,10 +48,10 @@
 
 .roomDetail .btn_submit:hover,
 .roomDetail .btn_submit:focus {
-  background-image: linear-gradient(to right, #f14658, #dc2537);
+  border: none;
   color: #fff;
   width: 250px;
-  /* box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.381); */
+  box-shadow: 0px 0px 5px 5px #f2083390;
 }
 .roomDetail .btn_head {
   color: #000;
@@ -227,9 +249,13 @@
     box-shadow: 0px 0px 5px 2px rgba(161, 156, 156, 0.596);
     border-radius: 10px;
   }
+  .roomDetail .roomDetail_book{
+    margin-bottom: 50px;
+  }
   .roomDetail .roomDetail_book_booking {
     position: relative;
     width: 450px;
+    height: 100%;
   }
   .roomDetail .roomDetail_book_booking .fixed {
     position: fixed;
@@ -238,7 +264,7 @@
   }
   .roomDetail .roomDetail_book_booking .absolute {
     position: absolute;
-    top: 325px;
+    bottom: 0;
     width: 450px;
   }
 }
